Deprecated Float constructor vervangen.